Keycloak: ensure user has a shell

--- a/roles/3trains_keycloak/tasks/main.yml
+++ b/roles/3trains_keycloak/tasks/main.yml
@@ -36,8 +36,7 @@
   become: yes
   user:
     name: "{{ keycloak_service_user }}"
-    home: /
-    shell: /sbin/nologin
+    home: /opt/keycloak
     system: yes
     create_home: no
 
