--- a/playbooks/wildfly.yml
+++ b/playbooks/wildfly.yml
@@ -2,7 +2,7 @@
 - name: Playbook for Wildfly Hosts
   hosts: wildfly
   collections:
-    - wildfly.jcliff
+    - middleware_automation.jcliff
   tasks:
     - name: JCliff
       include_role:
