--- a/playbooks/demo.yml
+++ b/playbooks/demo.yml
@@ -1,7 +1,11 @@
 ---
 - import_playbook: preconds.yml
+
 # Keycloak Playbook
 - import_playbook: keycloak.yml
+
+# JBoss Core Services (Apache HTTPD)
+- import_playbook: jbcs.yml
 
 # Wildfly Playbook
 - import_playbook: wildfly.yml
