--- a/roles/3trains_wildfly/tasks/main.yml
+++ b/roles/3trains_wildfly/tasks/main.yml
@@ -9,14 +9,5 @@
 - name: "Install Postresql driver"
   include_tasks: pgsql_jdbc_driver.yml
 
-- name: "Set up for all Wildfly instances"
-  include_tasks: set-up-wildfy-service.yml
+- include_tasks: appserver.yml
   loop: "{{ range(1, 4)|list }}"
-
-- name: "Install Keycloak Extension"
-  include_tasks: keycloak-extension-install.yml
-  loop: "{{ range(1, 4)|list }}"
-
-- name: "Deploy app in cluster"
-  include_tasks: fine-tuned-wildfly.yml
-  loop: "{{ range(1, 4)| list }}"
