Makes number of EAP instances by node configureable

--- a/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
+++ b/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
@@ -124,3 +124,5 @@
             - name: default
               proxies:
                 - proxy1
+- debug:
+    msg: "nb_instance_by_node: {{ nb_instances }}"
