--- a/roles/3trains_wildfly/tasks/main.yml
+++ b/roles/3trains_wildfly/tasks/main.yml
@@ -9,5 +9,11 @@
 - name: "Install Postresql driver"
   include_tasks: pgsql_jdbc_driver.yml
 
+- set_fact:
+    nb_instances: "{{ (nb_instance_by_node | default(3) ) }}"
+
+- set_fact:
+    nb_instances: "{{ (nb_instances | int) +1 }}"
+
 - include_tasks: appserver.yml
-  loop: "{{ range(1, 4)|list }}"
+  loop: "{{ range(1, nb_instances|int) | list }}"
