Fix missing keycloak rule

--- a/roles/3trains_wildfly/tasks/prereqs.yml
+++ b/roles/3trains_wildfly/tasks/prereqs.yml
@@ -42,6 +42,7 @@
     dest: "{{ jcliff_rules_dir }}"
   loop:
     - files/rules/modcluster
+    - files/rules/keycloak
     - files/rules/standard-sockets
 
 - name: Update jcliff ruleset to add modcluster and keycloak
