Bind JBCS against external IP

--- a/roles/3trains_jbcs/defaults/main.yml
+++ b/roles/3trains_jbcs/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 httpd:
+  bind_address: "{{ override_jbcs_bind_address | default('localhost') }}"
+  listen_port: "{{ override_jbcs_listen_port | default('80') }}"
   rpm:
     name: jbcs-httpd24
     nossl: true
