--- a/roles/3trains_jbcs/tasks/prereqs.yml
+++ b/roles/3trains_jbcs/tasks/prereqs.yml
@@ -5,4 +5,11 @@
   vars:
     packages_list:
       - mailcap
+      - unzip
+      - firewalld
 
+- name: "Ensure that firewalld service is running"
+  systemd:
+    name: firewalld
+    enabled: yes
+    state: started
