--- a/playbooks/jbcs.yml
+++ b/playbooks/jbcs.yml
@@ -6,6 +6,8 @@
   roles:
     - redhat_csp_download
   tasks:
+    - set_fact:
+        override_jbcs_bind_address: "{{ ansible_nodename }}"
     - name: "JBoss Core Services"
       include_role:
         name: 3trains_jbcs
