--- a/roles/3trains_jbcs/tasks/main.yml
+++ b/roles/3trains_jbcs/tasks/main.yml
@@ -1,3 +1,16 @@
 ---
 - include_tasks: prereqs.yml
 - include_tasks: install-jb-httpd.yml
+
+- name: configure firewall for JBCS ports
+  become: yes
+  firewalld:
+    port: "{{ port }}"
+    permanent: true
+    state: enabled
+    immediate: yes
+  loop:
+    - "80/tcp"
+    - "6666/tcp"
+  loop_control:
+    loop_var: port
