Fix unarchive jbcs

--- a/roles/3trains_jbcs/tasks/install-jb-httpd.yml
+++ b/roles/3trains_jbcs/tasks/install-jb-httpd.yml
@@ -46,6 +46,7 @@
 - name: Unarchive JBoss Core Services
   unarchive:
     src: "{{ zip_file_repo }}/jbcs.zip"
+    remote_src: yes
     dest: /opt
   when:
     - not httpd_home.stat.exists
