--- a/roles/3trains_wildfly/tasks/appserver.yml
+++ b/roles/3trains_wildfly/tasks/appserver.yml
@@ -1,9 +1,10 @@
 ---
-- name: "Set up for all Wildfly instances"
+-
+- name: "Set up for Wildfly instance wfly-{{ item }}"
   include_tasks: set-up-wildfy-service.yml
 
-- name: "Install Keycloak Extension"
+- name: "Install Keycloak Extension on instance wfly-{{ item }}"
   include_tasks: keycloak-extension-install.yml
 
-- name: "Deploy app in cluster"
+- name: "Deploy app on instance wfly-{{ item }}"
   include_tasks: fine-tuned-wildfly.yml
