wlfy: fix handler name

--- a/roles/3trains_wildfly/handlers/main.yml
+++ b/roles/3trains_wildfly/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Restart JBCS"
+- name: 'Restart Wildfly instances'
   service:
     name: "wildfly.config_name_prefix-{{ item }}"
     state: restarted
