--- a/roles/3trains_wildfly/handlers/main.yml
+++ b/roles/3trains_wildfly/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: 'Restart Wildfly instances'
   service:
-    name: "{{ wildfly.config_name_prefix }}-{{ item }}"
+    name: "{{ wildfly.config_name_prefix }}{{ item }}"
     state: restarted
   loop:
     - 1
