jbcs: deploy mod_cluster configuration

--- a/roles/3trains_jbcs/defaults/main.yml
+++ b/roles/3trains_jbcs/defaults/main.yml
@@ -2,6 +2,9 @@
 httpd:
   bind_address: "{{ override_jbcs_bind_address | default('localhost') }}"
   listen_port: "{{ override_jbcs_listen_port | default('80') }}"
+  mod_cluster:
+    port: 6666
+    require: "all granted"
   rpm:
     name: jbcs-httpd24
     nossl: true
