--- a/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
+++ b/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
@@ -1,11 +1,9 @@
 ---
 - set_fact:
-    port_shift: "{{ (item - wildfly.port_range_offset) * 100 }}"
-- set_fact:
-    wildfly_instance_management_port: "{{ 9990 + port_shift }}"
-    wildfly_instance_http_port: "{{ 8080 + port_shift }}"
-    wildfly_instance_https_port: "{{ 8443 + port_shift }}"
-    wildfly_instance_ajp_port: "{{ 8009 + port_shift }}"
+     wildfly_instance_management_port: "{{ 9990 + ((item - wildfly.port_range_offset) * 100) }}"
+     wildfly_instance_http_port: "{{ 8080 + ((item - wildfly.port_range_offset) * 100) }}"
+     wildfly_instance_https_port: "{{ 8443 + ((item - wildfly.port_range_offset) * 100) }}"
+     wildfly_instance_ajp_port: "{{ 8009 + ((item - wildfly.port_range_offset) * 100) }}"
 
 - name: configure firewall for Wildfly ports
   become: yes
