--- a/roles/3trains_wildfly/handlers/main.yml
+++ b/roles/3trains_wildfly/handlers/main.yml
@@ -1,9 +1,3 @@
 ---
 - name: 'Restart Wildfly instances'
-  service:
-    name: "{{ wildfly.config_name_prefix }}{{ item }}"
-    state: restarted
-  loop:
-    - 1
-    - 2
-    - 3
+  include: tasks/restart_wfly_instance.yml
