--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -2,3 +2,4 @@
 collections:
   - name: middleware_automation.jcliff
   - name: middleware_automation.redhat_csp_download
+  - name: community.general
