--- a/roles/3trains_wildfly/tasks/jcliff/jcliff-without-keycloak.yml
+++ b/roles/3trains_wildfly/tasks/jcliff/jcliff-without-keycloak.yml
@@ -33,5 +33,7 @@
             - name: default
               proxies:
                 - proxy1
+  environment:
+    JAVA_HOME: /usr/lib/jvm/java-1.8.0
   notify:
     - 'Restart Wildfly instances'
