jbcs: ensures chown is idempotent

--- a/roles/3trains_jbcs/tasks/install-jb-httpd.yml
+++ b/roles/3trains_jbcs/tasks/install-jb-httpd.yml
@@ -24,6 +24,7 @@
     owner: "{{ httpd.user.name }}"
     group: "{{ httpd.group.name }}"
     recurse: true
+  changed_when: false
 
 - set_fact:
     zip_file_repo: /opt/apps
