wfly: ensure JAVA_HOME is set for JCliff

--- a/roles/3trains_wildfly/tasks/jcliff/jcliff-without-keycloak.yml
+++ b/roles/3trains_wildfly/tasks/jcliff/jcliff-without-keycloak.yml
@@ -34,6 +34,6 @@
               proxies:
                 - proxy1
   environment:
-    JAVA_HOME: /usr/lib/jvm/java-1.8.0
+    JAVA_HOME: "{{ java.home }}"
   notify:
     - 'Restart Wildfly instances'
