--- a/roles/3trains_wildfly/tasks/jcliff/jcliff-with-keycloak.yml
+++ b/roles/3trains_wildfly/tasks/jcliff/jcliff-with-keycloak.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Fine tune Wildfly configuration"
+- name: "Fine tuning configuration: {{ instance_name }}"
   jcliff:
     wfly_home: "{{ wildfly.home }}"
     rule_file: roles/3trains_wildfly/files/custom/
@@ -8,7 +8,7 @@
     components:
       - system_properties:
         - name: JBOSS_ID
-          value: "{{ wildfly.basedir_prefix }}{{ item }}"
+          value: "{{ instance_name }}"
       - deployments:
           - name: "{{ app_dest | basename }}"
             path: "{{ app_dest }}"
@@ -21,7 +21,7 @@
             driver_class_name: org.postgresql.Driver
             driver_xa_datasource_class_name: org.postgresql.xa.PGXADataSource
       - datasources:
-          - name: "{{ wildfly.config_name_prefix }}db"
+          - name: "{{ instance_name }}db"
             use_java_context: 'true'
             jndi_name: "java:jboss/datasources/{{ postgres.db_name }}"
             connection_url: "jdbc:postgresql://localhost:5432/{{ postgres.db_name }}"
