--- a/roles/3trains_wildfly/tasks/jcliff/jcliff-without-keycloak.yml
+++ b/roles/3trains_wildfly/tasks/jcliff/jcliff-without-keycloak.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Fine tune Wildfly configuration"
+- name: "Fine tuning configuration: {{ instance_name }}"
   jcliff:
     wfly_home: "{{ wildfly.home }}"
     rule_file: roles/3trains_wildfly/files/custom/
@@ -8,11 +8,8 @@
     components:
       - system_properties:
         - name: JBOSS_ID
-          value: "{{ wildfly.basedir_prefix }}{{ item }}"
+          value: "{{ instance_name }}"
       - deployments:
-          - name: "{{ app_dest | basename }}"
-            path: "{{ app_dest }}"
-            replace_runtime_name_regex: "{{  (app_dest | basename).split('-')[0] }}-.*"
           - name: info-1.0.war
             path: /opt/info-1.0.war
       - drivers:
@@ -21,7 +18,7 @@
             driver_class_name: org.postgresql.Driver
             driver_xa_datasource_class_name: org.postgresql.xa.PGXADataSource
       - datasources:
-          - name: "{{ wildfly.config_name_prefix }}db"
+          - name: "{{ instance_name }}db"
             use_java_context: 'true'
             jndi_name: "java:jboss/datasources/{{ postgres.db_name }}"
             connection_url: "jdbc:postgresql://localhost:5432/{{ postgres.db_name }}"
@@ -35,5 +32,3 @@
                 - proxy1
   environment:
     JAVA_HOME: "{{ java.home }}"
-  notify:
-    - 'Restart Wildfly instances'
