--- a/roles/3trains_wildfly/tasks/appserver.yml
+++ b/roles/3trains_wildfly/tasks/appserver.yml
@@ -3,7 +3,18 @@
     instance_id: "{{ item }}"
 
 - name: "Set up for Wildfly instance wfly-{{ item }}"
-  include_tasks: set-up-wildfy-service.yml
+  include_role:
+    name: wildfly_systemd
+  vars:
+    wildfly_home: "{{ wildfly.home }}"
+    wildfly_user: "{{ wildfly.user }}"
+    wilfly_group: "{{ wildfly.group }}"
+    wildfly_config_base: "{{ wildfly.config.base }}"
+    wildfly_basedir_prefix: "{{ wildfly.basedir_prefix }}"
+    wildfly_config_name: "{{ wildfly.config.name }}"
+    wildfly_port_range_offset: 0
+    instance_id: "{{ item }}"
+
 
 - name: "Install Keycloak Extension on instance wfly-{{ item }}"
   include_tasks: keycloak-extension-install.yml
