--- a/roles/3trains_postgresql/defaults/main.yml
+++ b/roles/3trains_postgresql/defaults/main.yml
@@ -3,6 +3,7 @@ packages_list:
   - python-psycopg2
   - postgresql-server
   - postgresql-devel
+psql_host: "{{
 db:
   name: "{{ postgres.db_name | default('default_db') }}"
   user: "{{ postgres.user.name | default('db_user') }}"
