pgsql: if pg runs on decidated node, python needs to be installed

--- a/roles/3trains_postgresql/defaults/main.yml
+++ b/roles/3trains_postgresql/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 packages_list:
-  - python-psycopg2
+  - python39
+  - python39-devel
+  - python3-psycopg2
   - postgresql-server
   - postgresql-devel
 db:
