--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -3,3 +3,4 @@ collections:
   - name: middleware_automation.jcliff
   - name: middleware_automation.redhat_csp_download
   - name: community.general
+  - name: community.postgresql
