wfly: cleanup deps installation

--- a/roles/3trains_wildfly/tasks/prereqs.yml
+++ b/roles/3trains_wildfly/tasks/prereqs.yml
@@ -9,15 +9,19 @@
     - procps-ng
     - initscripts
     - "{{ jvm_package | default('java-1.8.0-openjdk-devel') }}"
+    - firewalld
 
 - name: "Ensures required packages are installed"
   include_role:
     name: 3trains_fastpackages
-
-- name: install firewalld
-  become: yes
-  package:
-    name: firewalld
+  vars:
+    packages_list:
+      - zip
+      - unzip
+      - procps-ng
+      - initscripts
+      - "{{ jvm_package | default('java-1.8.0-openjdk-devel') }}"
+      - firewalld
 
 - name: enable and start the firewalld service
   become: yes
