--- a/roles/3trains_wildfly/tasks/keycloak-extension-install.yml
+++ b/roles/3trains_wildfly/tasks/keycloak-extension-install.yml
@@ -1,29 +1,26 @@
 ---
 - set_fact:
     wildfly_instance_port: "{{ 9990 + ((item - wildfly.port_range_offset) * 100) }}"
+    jboss_cli: "{{ wildfly.home }}/bin/jboss-cli.sh -c --controller=localhost:{{ wildfly_instance_port }}"
 
-- name: Check if Keycloak extensions installed
-  command: >
-    {{ wildfly.home }}/bin/jboss-cli.sh --output-json -c --controller="localhost:{{ wildfly_instance_port }}" --command="/extension=org.keycloak.keycloak-adapter-subsystem:read-resource"
-  args:
-    chdir: "{{ wildfly.home }}"
-  ignore_errors: true
-  register: keycloak_installed
-  changed_when: (keycloak_installed.stdout | from_json)['outcome'] != "success"
-
-- name: Install Keycloak Adapter and Reload
-  block:
-    - name: Install Keycloak Adapter
+- block:
+    - name: Check if Keycloak extensions installed
       command: >
-        {{ wildfly.home }}/bin/jboss-cli.sh -c --controller="localhost:{{ wildfly_instance_port }}" --file={{ wildfly.home }}/bin/adapter-elytron-install.cli
+        {{ jboss_cli }} --command='/extension=org.keycloak.keycloak-adapter-subsystem:read-resource'
       args:
         chdir: "{{ wildfly.home }}"
-    - name: Reload After Keycloak Adapter Install
-      command: >
-        {{ wildfly.home }}/bin/jboss-cli.sh -c --controller="localhost:{{ wildfly_instance_port }}" --command=":reload"
-      args:
-        chdir: "{{ wildfly.home }}"
+  rescue:
+    - name: Install Keycloak Adapter and Reload
+      block:
+        - name: Install Keycloak Adapter
+          command: >
+            {{ jboss_cli }} --file={{ wildfly.home }}/bin/adapter-elytron-install.cli
+          args:
+            chdir: "{{ wildfly.home }}"
+        - name: Reload After Keycloak Adapter Install
+          command: >
+            {{ jboss_cli }} --command=":reload"
+          args:
+            chdir: "{{ wildfly.home }}"
   when:
     - not disable_keycloak is defined
-    - keycloak_download_url is defined
-    - (keycloak_installed.stdout | from_json)['outcome'] != "success"
