--- a/roles/3trains_wildfly/tasks/keycloak-extension-install.yml
+++ b/roles/3trains_wildfly/tasks/keycloak-extension-install.yml
@@ -1,6 +1,15 @@
 ---
+- assert:
+    that:
+      - wildfly is defined
+      - wildfly.port_range_offset is defined
+      - wildfly.home is defined
+    quiet: true
+
 - set_fact:
     wildfly_instance_port: "{{ 9990 + ((item - wildfly.port_range_offset) * 100) }}"
+
+- set_fact:
     jboss_cli: "{{ wildfly.home }}/bin/jboss-cli.sh -c --controller=localhost:{{ wildfly_instance_port }}"
 
 - block:
