--- a/roles/3trains_wildfly/tasks/jcliff/jcliff-with-keycloak.yml
+++ b/roles/3trains_wildfly/tasks/jcliff/jcliff-with-keycloak.yml
@@ -24,7 +24,7 @@
           - name: "{{ instance_name }}db"
             use_java_context: 'true'
             jndi_name: "java:jboss/datasources/{{ postgres.db_name }}"
-            connection_url: "jdbc:postgresql://localhost:5432/{{ postgres.db_name }}"
+            connection_url: "jdbc:postgresql://{{ (groups['pgsql'][0] if groups['pgsql'] | length > 0 else 'localhost') }}:5432/{{ postgres.db_name }}"
             driver_name: postgresql
             user_name: "{{ postgres.user.name }}"
             password: "{{ postgres.user.password }}"
